--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native": "0.72.6",
     "react-native-animatable": "^1.4.0",
     "react-native-elements": "^3.4.3",
+    "react-native-feather": "^1.1.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
