--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo-google-fonts/poppins": "^0.2.3",
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "^1.18.2",
+    "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.16",
     "@reduxjs/toolkit": "^1.9.7",
@@ -20,6 +21,7 @@
     "expo": "~49.0.15",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "lottie-react-native": "5.1.6",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-alert-notification": "^0.3.5",
@@ -27,16 +29,17 @@
     "react-native-animated-loader": "^1.0.0",
     "react-native-elements": "^3.4.3",
     "react-native-feather": "^1.1.2",
+    "react-native-gesture-handler": "~2.12.0",
     "react-native-indicator": "^1.2.2",
     "react-native-indicators": "^0.17.0",
     "react-native-linear-gradient": "^2.8.3",
-    "react-native-safe-area-context": "4.6.3",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.0.1",
     "react-redux": "^8.1.3",
-    "redux": "^4.2.1",
-    "lottie-react-native": "5.1.6"
+    "redux": "^4.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
