--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@supabase/supabase-js": "^2.38.4",
     "axios": "^1.6.0",
     "expo": "~49.0.15",
+    "expo-file-system": "~15.4.5",
+    "expo-image-picker": "~14.3.2",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "lottie-react-native": "5.1.6",
@@ -30,6 +32,7 @@
     "react-native-elements": "^3.4.3",
     "react-native-feather": "^1.1.2",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-image-crop-picker": "^0.40.2",
     "react-native-indicator": "^1.2.2",
     "react-native-indicators": "^0.17.0",
     "react-native-linear-gradient": "^2.8.3",
@@ -39,7 +42,8 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.0.1",
     "react-redux": "^8.1.3",
-    "redux": "^4.2.1"
+    "redux": "^4.2.1",
+    "@react-native-community/datetimepicker": "7.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
