--- a/package.json
+++ b/package.json
@@ -43,7 +43,10 @@
     "react-native-vector-icons": "^10.0.1",
     "react-redux": "^8.1.3",
     "redux": "^4.2.1",
-    "@react-native-community/datetimepicker": "7.2.0"
+    "@react-native-community/datetimepicker": "7.2.0",
+    "react-native-web": "~0.19.6",
+    "react-dom": "18.2.0",
+    "@expo/webpack-config": "^19.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
